Simplified LocalUserDetailsService.