@@ -1,17 +1,15 @@
 package com.modwin.ModwinChatApp.service;
 
-import com.modwin.ModwinChatApp.persistence.repository.UserRepository;
 import com.modwin.ModwinChatApp.persistence.model.User;
-import org.springframework.security.core.GrantedAuthority;
+import com.modwin.ModwinChatApp.persistence.repository.UserRepository;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsPasswordService;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Locale;
 
 @Service
 public class LocalUserDetailsService implements UserDetailsService {
@@ -23,21 +21,17 @@ public class LocalUserDetailsService implements UserDetailsService {
     }
 
     @Override
-    public UserDetails loadUserByUsername( String username) throws UsernameNotFoundException {
-        System.out.println("FETCHING USER = " + username);
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
+    @Transactional(readOnly = true)
+    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+        User user = userRepository.findByEmail(email.trim().toLowerCase(Locale.ROOT))
+                .filter(candidate -> candidate.getPassword() != null)
+                .orElseThrow(() -> new UsernameNotFoundException("Invalid email or password."));
 
-        List<GrantedAuthority> authorities = user.getRoles()
-                .stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role.getName()))
-                .collect(Collectors.toList());
-
-        return new org.springframework.security.core.userdetails.User(
-                user.getUsername(),
-                user.getPassword(),
-                authorities);
-
+        return org.springframework.security.core.userdetails.User.withUsername(user.getUsername())
+                .password(user.getPassword())
+                .authorities(user.getRoles().stream()
+                        .map(role -> new SimpleGrantedAuthority("ROLE_" + role.getName()))
+                        .toList())
+                .build();
     }
-
 }
